--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
     <nav>
         <div class="logo">
-            <img src="/HTML CSS FINAL/Image/logo-removebg-preview.png" alt="Logo">
+            <img src="Image/logo-removebg-preview.png" alt="Logo">
         </div>
         <div class="menu">
             <a href="#home">Home</a>
@@ -42,7 +42,7 @@
             <a href="#" class="btn">Read More</a>
         </div>
         <div class="image">
-            <img src="/HTML CSS FINAL/Image/banner1.png" alt="">
+            <img src="Image/banner1.png" alt="">
         </div>
     </div>
 
@@ -54,12 +54,12 @@
         <p class="p">Urban startups in Bihar are revolutionizing industries, fostering innovation, boosting employment, enhancing technology, and transforming city infrastructure for sustainable economic growth.</p><br><br><br>
         <div class="cards-container">
             <div class="card">
-                <img src="/HTML CSS FINAL/Image/urban1.jpg" alt="Urban Startup 1">
+                <img src="Image/urban1.jpg" alt="Urban Startup 1">
                 <h3>Urban Startup 1</h3>
                 <p>Revolutionizing technology and business in cities.</p>
             </div>
             <div class="card">
-                <img src="/HTML CSS FINAL/Image/urban2.jpg" alt="Urban Startup 2">
+                <img src="Image/urban2.jpg" alt="Urban Startup 2">
                 <h3>Urban Startup 2</h3>
                 <p>Enhancing smart city infrastructure and connectivity.</p>
             </div>
@@ -71,12 +71,12 @@
         <p class="p">Rural startups in Bihar empower farmers, promote sustainable agriculture, generate employment, boost handmade goods, and drive economic development in villages.</p><br><br><br>
         <div class="cards-container">
             <div class="card">
-                <img src="/HTML CSS FINAL/Image/rural1.jpg" alt="Rural Startup 1">
+                <img src="Image/rural1.jpg" alt="Rural Startup 1">
                 <h3>Rural Startup 1</h3>
                 <p>Transforming agriculture with modern techniques.</p>
             </div>
             <div class="card">
-                <img src="/HTML CSS FINAL/Image/rural2.jpg" alt="Rural Startup 2">
+                <img src="Image/rural2.jpg" alt="Rural Startup 2">
                 <h3>Rural Startup 2</h3>
                 <p>Providing employment through handmade goods.</p>
             </div>
