--- a/login.html
+++ b/login.html
@@ -110,7 +110,7 @@
 </head>
 <body>
     <div class="login-box">
-        <img src="/HTML CSS FINAL/Image/output-onlinepngtools (2).png" alt="Startup Bihar Logo">
+        <img src="Image/output-onlinepngtools (2).png" alt="Startup Bihar Logo">
         <h2>Login</h2>
         <input type="text" id="username" placeholder="Username" required>
         <input type="password" id="password" placeholder="Password" required>
