--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
             <a href="#contact">Contact Us</a>
         </div>
         <div class="search-box">
-            <input type="text" placeholder="Search Here">
+            <input type="text" placeholder="Search ">
             <i class="ri-search-line"></i>
         </div>
     </nav>
