--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
                     <a href="#partner">Partners</a>
                     <a href="#">Faq's</a>
                     <a href="#">404</a>
+                    <a href="login.html">Log In</a>
                 </div>
             </div>
             <a href="#contact">Contact Us</a>
