--- a/login.html
+++ b/login.html
@@ -114,7 +114,7 @@
         <h2>Login</h2>
         <input type="text" id="username" placeholder="Username" required>
         <input type="password" id="password" placeholder="Password" required>
-        <a href="/HTML CSS FINAL/index.html" target="_blank"><button class="btn">Login</button></a>
+        <a href="index.html" target="_blank"><button class="btn">Login</button></a>
     </div>
 </body>
 </html>
